@@ -77,10 +77,10 @@ public class TestBlockPoolSliceStorage {
   private String makeRandomBlockFileSubdir(int nestingLevel) {
     StringBuilder sb = new StringBuilder();
 
-    sb.append("/");
+    sb.append(File.separator);
 
     for (int i = 0; i < nestingLevel; ++i) {
-      sb.append("subdir" + rand.nextInt(64) + "/");
+      sb.append("subdir" + rand.nextInt(64) + File.separator);
     }
     return sb.toString();
   }
@@ -94,12 +94,12 @@ public class TestBlockPoolSliceStorage {
     final String blockFileName = fileName;
 
     String testFilePath =
-        storage.getSingularStorageDir().getRoot() + "/" +
+        storage.getSingularStorageDir().getRoot() + File.separator +
             Storage.STORAGE_DIR_CURRENT +
             blockFileSubdir + blockFileName;
 
     String expectedTrashPath =
-        storage.getSingularStorageDir().getRoot() + "/" +
+        storage.getSingularStorageDir().getRoot() + File.separator +
             BlockPoolSliceStorage.TRASH_ROOT_DIR +
             blockFileSubdir.substring(0, blockFileSubdir.length() - 1);
 
@@ -118,12 +118,12 @@ public class TestBlockPoolSliceStorage {
     final String blockFileName = fileName;
 
     String deletedFilePath =
-        storage.getSingularStorageDir().getRoot() + "/" +
+        storage.getSingularStorageDir().getRoot() + File.separator +
         BlockPoolSliceStorage.TRASH_ROOT_DIR +
         blockFileSubdir + blockFileName;
 
     String expectedRestorePath =
-        storage.getSingularStorageDir().getRoot() + "/" +
+        storage.getSingularStorageDir().getRoot() + File.separator +
             Storage.STORAGE_DIR_CURRENT +
             blockFileSubdir.substring(0, blockFileSubdir.length() - 1);
 
